Refactor services to improve dependency injection and enhance performance; update constants and clean up unused imports